Correction overflow mid content

--- a/sass/layouts/_mid-content.scss
+++ b/sass/layouts/_mid-content.scss
@@ -67,6 +67,7 @@
 
 @media (min-width: $desktop){
   .mid-content{
+    overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 700px 700px 700px;
